intel/bench_214_work/extr_.linuxdriversgpudrmamddisplaydccoredc.c_get_scaling_info_update_type_with_main/log.txt
bench_214_work/extr_.linuxdriversgpudrmamddisplaydccoredc.c_get_scaling_info_update_type_with_main/extr_.linuxdriversgpudrmamddisplaydccoredc.c_get_scaling_info_update_type_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
bench_214_work/extr_.linuxdriversgpudrmamddisplaydccoredc.c_get_scaling_info_update_type_with_main/extr_.linuxdriversgpudrmamddisplaydccoredc.c_get_scaling_info_update_type_with_main.c:46:10: error: cannot initialize return object of type 'enum surface_update_type' with an lvalue of type 'int'
                return UPDATE_TYPE_FAST;
                       ^~~~~~~~~~~~~~~~
bench_214_work/extr_.linuxdriversgpudrmamddisplaydccoredc.c_get_scaling_info_update_type_with_main/extr_.linuxdriversgpudrmamddisplaydccoredc.c_get_scaling_info_update_type_with_main.c:82:10: error: cannot initialize return object of type 'enum surface_update_type' with an lvalue of type 'int'
                return UPDATE_TYPE_FULL;
                       ^~~~~~~~~~~~~~~~
bench_214_work/extr_.linuxdriversgpudrmamddisplaydccoredc.c_get_scaling_info_update_type_with_main/extr_.linuxdriversgpudrmamddisplaydccoredc.c_get_scaling_info_update_type_with_main.c:86:10: error: cannot initialize return object of type 'enum surface_update_type' with an lvalue of type 'int'
                return UPDATE_TYPE_MED;
                       ^~~~~~~~~~~~~~~
bench_214_work/extr_.linuxdriversgpudrmamddisplaydccoredc.c_get_scaling_info_update_type_with_main/extr_.linuxdriversgpudrmamddisplaydccoredc.c_get_scaling_info_update_type_with_main.c:88:9: error: cannot initialize return object of type 'enum surface_update_type' with an lvalue of type 'int'
        return UPDATE_TYPE_FAST;
               ^~~~~~~~~~~~~~~~
5 errors generated.
HLS FPGA Parse FAILED.
